Fixed overflowed notification link

--- a/web/dbpatterns/dbpatterns/static/css/screen.css
+++ b/web/dbpatterns/dbpatterns/static/css/screen.css
@@ -1385,7 +1385,6 @@ ul.notification-list li {
             text-decoration: none;
             color: #6a6e74;
             font-size: 20px;
-            margin-left: 10px;
         }
 
         ul.notification-list li img {
